[package]
name = "rest-excel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxlsxwriter-sys = "1.1.1"
xlsxwriter = "0.3.5"
serde_json = "1.0"
serde = "1.0.130"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-rt = "2.0.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-cors = "0.5.4"